<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OnTime</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_check_in">CheckInActivity</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="version_colon">Version: </string>
    <string name="learn_more_and_register">Learn more and register</string>
    <string name="select_business_file">Select Business File</string>
    <string name="ok">OK</string>
    <string name="getting_status">Getting status…</string>
    <string name="loading_information">Loading information…</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="check_in">Check in</string>
    <string name="start_break">Start Break</string>
    <string name="finish_break">Finish break</string>
    <string name="check_out">Check Out</string>
    <string name="sync">Sync</string>
    <string name="clear_records_older_than">Clear records older than</string>
    <string name="days">days</string>
    <string name="go">Go!</string>
    <string name="visit_our_website_amp_access_tutorials"><![CDATA[Visit our website & access tutorials]]></string>
    <string name="de_register">De-register</string>
    <string name="change_business_file">Change linked business</string>
    <string name="sync_all_activity">Sync all activity</string>
    <string name="syncing">Syncing…</string>
    <string name="next_reminder">Next Reminder:\n</string>
    <string name="failed_to_load_company_information">Failed to load company information.</string>
    <string name="location_not_enabled">Location is not enabled.</string>
    <string name="getting_location">Getting location…</string>
    <string name="uploading_data">Uploading data…</string>
    <string name="location_available_gps_network">Location is available through GPS and network.</string>
    <string name="location_available_gps">Location is available through GPS.</string>
    <string name="location_available_network">Location is available through network.</string>
    <string name="location_not_available">Location is not available.</string>
    <string name="we_havent_seen_you">We haven’t seen you for a while. Click OK to continue.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
</resources>